base map 2, add back button, turn bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="phaser.min.js"></script>
 <script type="text/javascript" src="src/start.js"></script>
 <script type="text/javascript" src="src/game1.js"></script>
+<script type="text/javascript" src="src/game2.js"></script>
 <script type="text/javascript" src="src/controller.js"></script>
 </body>
 </html>
