--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="src/start.js"></script>
 <script type="text/javascript" src="src/game1.js"></script>
 <script type="text/javascript" src="src/game2.js"></script>
+<script type="text/javascript" src="src/game3.js"></script>
 <script type="text/javascript" src="src/controller.js"></script>
 </body>
 </html>
