--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script type="text/javascript" src="phaser.min.js"></script>
+<script type="text/javascript" src="src/congratulation.js"></script>
 <script type="text/javascript" src="src/start.js"></script>
 <script type="text/javascript" src="src/game1.js"></script>
 <script type="text/javascript" src="src/game2.js"></script>
